--- a/MakeFile
+++ b/MakeFile
@@ -1,7 +1,5 @@
-
-study.exe: Naturvidenskab.o Humaniora.o Teknisk.o Samfund.o utillity.o Sundhed.o main.c
-	gcc -o study -ansi -Wall -pedantic Naturvidenskab.o Humaniora.o Teknisk.o Samfund.o utillity.o Sundhed.o main.c
-
+study.exe: Naturvidenskab.o Humaniora.o Teknisk.o Samfund.o utility.o Sundhed.o main.c
+	gcc -o study -ansi -Wall -pedantic Naturvidenskab.o Humaniora.o Teknisk.o Samfund.o utility.o Sundhed.o main.c
 
 Naturvidenskab.o: Naturvidenskab.c Naturvidenskab.h
 	gcc -c -ansi -Wall -pedantic Naturvidenskab.c 
@@ -18,8 +16,9 @@ Sundhed.o: Sundhed.c Sundhed.h
 Teknisk.o: Teknisk.c Teknisk.h
 	gcc -c -ansi -Wall -pedantic Teknisk.c 
 
-utillity.o: utillity.c utillity.h
-	gcc -c -ansi -Wall -pedantic utillity.c 
+utility.o: utility.c utility.h
+	gcc -c -ansi -Wall -pedantic utility.c 
 	
 clean:
 	rm *.o study.exe
+	
