--- a/MakeFile
+++ b/MakeFile
@@ -1,5 +1,5 @@
-study.exe: Naturvidenskab.o Humaniora.o Teknisk.o Samfund.o utility.o Sundhed.o main.c
-	gcc -o study -ansi -Wall -pedantic Naturvidenskab.o Humaniora.o Teknisk.o Samfund.o utility.o Sundhed.o main.c
+study.exe: Naturvidenskab.o Humaniora.o Teknisk.o Samfund.o utility.o Sundhed.o fakultet.o main.c
+	gcc -o study -ansi -Wall -pedantic Naturvidenskab.o Humaniora.o Teknisk.o Samfund.o utility.o Sundhed.o fakultet.o main.c
 
 Naturvidenskab.o: Naturvidenskab.c Naturvidenskab.h
 	gcc -c -ansi -Wall -pedantic Naturvidenskab.c 
@@ -18,7 +18,10 @@ Teknisk.o: Teknisk.c Teknisk.h
 
 utility.o: utility.c utility.h
 	gcc -c -ansi -Wall -pedantic utility.c 
-	
+
+fakultet.o: fakultet.c fakultet.h
+	gcc -c -ansi -Wall -pedantic fakultet.c 
+
 clean:
 	rm *.o study.exe
 	
