--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10.2)
-project(MyProject VERSION 1.0.0)
+project(MyProject VERSION 1.0.0 LANGUAGES C)
 
 add_subdirectory(study/src)
 add_subdirectory(study)
